# HTN-Maker

./: Makefile.am  Makefile.in  README.txt  aclocal.m4  add-ids.cpp  annotated_plan.cpp  annotated_plan.hpp  bw-gen.cpp  config.h.in  configure  configure.ac  exception.cpp  exception.hpp  formula.cpp  formula.hpp  formula_conj.cpp  formula_conj.hpp  formula_equ.cpp  formula_equ.hpp  formula_neg.cpp  formula_neg.hpp  formula_pred.cpp  formula_pred.hpp  funcs.cpp  funcs.hpp  htn-maker.cpp  htn-solver.cpp  htn-solver2.cpp  htn_domain.cpp  htn_domain.hpp  htn_method.cpp  htn_method.hpp  htn_problem.cpp  htn_problem.hpp  htn_solution.cpp  htn_solution.hpp  htn_task_descr.cpp  htn_task_descr.hpp  htn_task_head.cpp  htn_task_head.hpp  (+44 more)
examples/blocks-world/: prob01-htn.pddl  prob01-solution.plan  prob01-strips.pddl  prob02-htn.pddl  prob02-strips.pddl  prob03-htn.pddl  prob03-strips.pddl  prob05-solution.plan  prob05-strips.pddl  result.txt  task_clear.pddl
examples/depots/: domain_htn.pddl  domain_partial_htn.pddl  domain_strips.pddl  prob01-htn.pddl  prob01-solution.plan  prob01-strips.pddl  prob02-htn.pddl  prob02-strips.pddl  prob03-htn.pddl  prob03-strips.pddl  tasks.pddl
examples/logistics/: prob01-htn.pddl  prob01-solution.plan  prob01-strips.pddl  prob02-htn.pddl  prob02-strips.pddl  prob03-htn.pddl  prob03-strips.pddl
examples/rovers/: domain_htn.pddl  domain_partial_htn.pddl  domain_strips.pddl  prob01-htn.pddl  prob01-solution.plan  prob01-strips.pddl  prob02-htn.pddl  prob02-strips.pddl  prob03-htn.pddl  prob03-strips.pddl  tasks.pddl
examples/satellite/: domain_partial_htn.pddl  domain_strips.pddl  prob01-htn.pddl  prob01-solution.plan  prob01-strips.pddl  prob02-htn.pddl  prob02-strips.pddl  prob03-htn.pddl  prob03-strips.pddl
